typo in text file

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2014 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -21,16 +21,12 @@
 ; $HeadURL$
 
 
-SP.ITEMID_MISSING_WARN="It looks like some urls doesnt have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href="%s" target="_blank">documentation</a>. Object id was: %d"
+SP.ITEMID_MISSING_WARN="It seems some URLs don't have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href='%s' target='_blank'>documentation</a>. Object id: %d"
 
-;SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Showing only first %d results. Please specify more criteria to narrow the search down."
 SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Only the first %d results will be shown. Please specify more criteria to narrow down the search."
-
 SP.FM.ICON="Icon"
-
 SP.ENTRY_STATUS_UNAPPROVED="The currently displayed version of this entry is 'unapproved'. You can see this version because you have permission to see unapproved entries."
 SP.ENTRY_STATUS_UNPUBLISHED="The entry's status of this particular entry is 'unpublished'. You can see this entry because you have permission to see unpublished entries."
-
 SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this content (%s) in %s language. Please note, that all changes you make will be stored in this language!"
 SP.CRAWL_URL_PARSED_DONE="Done. Parsed %d links."
 SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d of %d pages in this loop."
