--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -28,6 +28,12 @@ Legend:
 
 
 -------------------
+1.1.11 ()
+-------------------
+
+    (#) Messages que overflow.
+
+-------------------
 1.1.10 (28 July 2014)
 -------------------
 
