--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -19,6 +19,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
 
 $Date$
 
+#let's check commits ?
+
+
 Legend:
  (*) - Security Fix
  (#) - Bug Fix
