--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -28,7 +28,7 @@ Legend:
 
 
 -------------------
-1.1.11 ()
+1.1.11 (Sun, Oct 12, 2014 19:59:36 )
 -------------------
 
     (+) Possibility to define parent container for datePicker
