Started a manual crop

--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -20,6 +20,8 @@
 ; $Author$
 ; $HeadURL$
 
+SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area"
+SP.IMAGE_CROP_HEADER="Crop Image"
 
 SP.ITEMID_MISSING_WARN="It seems some URLs don't have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href='%s' target='_blank'>documentation</a>. Object id: %d"
 
