--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -164,10 +164,10 @@ SP.TASK_NOT_FOUND_WRONG_CLASS="Task not found: %s. Wrong class definition."
 SP.TEMPLATE_DOES_NOT_EXISTS="Template %s does not exist!"
 SP.TEMPLATE_INST_DUPLICATE="A template with the id '%s' is already installed. Please remove it first."
 SP.THERE_IS_NO_SUCH_FIELD="There is no field with this id '%s'"
-SP.UNAUTHORIZED_ACCESS_TASK="Unauthorized Access Task: %s."
-SP.YOU_ARE_NOT_AUTH_TO_ADD_AN_ENTRY="You are not authorized to add an entry."
-SP.YOU_ARE_NOT_AUTH_TO_EDIT_THIS_ENTRY="You are not authorized to edit this entry."
-SP.UNAUTHORIZED_ACCESS="Unauthorized Access."
+SP.UNAUTHORIZED_ACCESS_TASK="Unauthorised Access Task: %s."
+SP.YOU_ARE_NOT_AUTH_TO_ADD_AN_ENTRY="You are not authorised to add an entry."
+SP.YOU_ARE_NOT_AUTH_TO_EDIT_THIS_ENTRY="You are not authorised to edit this entry."
+SP.UNAUTHORIZED_ACCESS="Unauthorised Access."
 SP.TASK_NOT_FOUND="Task not found."
 SP.CANNOT_LOAD_TEMPLATE_FILE="Cannot load template file at %s"
 SP.CANNOT_PARSE_TEMPLATE_FILE="Cannot parse template file at %s"
