--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -40,6 +40,7 @@ Legend:
     (#) Router - not possible to use dash in the in config defined alias (Issue #1322)
     (#) Creation date of the duplicated entry is the same as the original (Issue #1328)
     (#) If in datepicker all time options are disabled it is removing also 'now' and 'clear' buttons (Issue #1346)
+    (#) Wrong date when Joomla! time zone is different than server time (Issue #1348)
 
     (!) Changed deprecated JException to core Exception
 
