--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -28,21 +28,22 @@ Legend:
 
 
 -------------------
-1.1.11 (Sun, Oct 12, 2014 19:59:36 )
+1.1.11 ()
 -------------------
 
     (+) Possibility to define parent container for datePicker
+    (+) Image Field functionality extended: possibility to crop an image
 
-    (#) Messages que overflow.
+    (#) Messages queue overflow
     (#) Category field causes 500 error if contains comma separated data
     (#) SobiPro redirects are causing a 303 code
-    (#) DatePicker converts timestamp to a scientific notation on some servers. Forcing integer output
+    (#) DatePicker converts timestamp to a scientific notation on some servers; forcing integer output
     (#) Router - not possible to use dash in the in config defined alias (Issue #1322)
     (#) Creation date of the duplicated entry is the same as the original (Issue #1328)
     (#) If in datepicker all time options are disabled it is removing also 'now' and 'clear' buttons (Issue #1346)
     (#) Wrong date when Joomla! time zone is different than server time (Issue #1348)
     (#) Wrong results for range search (Issue #1343)
-    (#) SigsiuTree, category field: Disabled possibility to select (click) additional category as long the previous wasn't added (Issue #1347)
+    (#) SigsiuTree, category field: disabled possibility to select (click) additional category as long as the previous wasn't added (Issue #1347)
 
     (!) Changed deprecated JException to core Exception
 
