(#) Fixed issues with time and time offset

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -37,6 +37,7 @@ Legend:
     (#) Image field didn't appear on payment page (Issue #1375)
     (#) Original image is being overwritten with cropped image
     (#) Size of News container corrected
+    (#) Fixed issues with time and time offset
 
 
 
