(#) Added IE11 to valid browsers list (Issue #1368) - Big thanks dear Microsoft for changing the string for no fraking reason

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,6 +42,7 @@ Legend:
     (#) Itemprop attribute not being displayed in the field edit form (Issue #1392)
     (#) Not possible to access entries in front end due to time offset (Issue #1389)
     (#) Path issues at Windows "server" (Issue #1365)
+    (#) Added IE11 to valid browsers list (Issue #1368)
 
 
 -------------------
