--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -43,6 +43,7 @@ Legend:
     (#) Not possible to access entries in front end due to time offset (Issue #1389)
     (#) Path issues at Windows "server" (Issue #1365)
     (#) Added IE11 to valid browsers list (Issue #1368)
+    (#) Allowing unicode groups names in select lis (Issue #1364)
 
 
 -------------------
