--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -44,6 +44,7 @@ Legend:
     (#) Path issues at Windows "server" (Issue #1365)
     (#) Added IE11 to valid browsers list (Issue #1368)
     (#) Allowing unicode groups names in select lis (Issue #1364)
+    (#) Redirection message is missing (Issue #1366)
 
 
 -------------------
