(#) Disabling time check in cache while adding an object and "force" parameter is set to true

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -45,6 +45,7 @@ Legend:
     (#) Added IE11 to valid browsers list (Issue #1368)
     (#) Allowing unicode groups names in select lis (Issue #1364)
     (#) Redirection message is missing (Issue #1366)
+    (#) Disabling time check in cache while adding an object and "force" parameter is set to true
 
 
 -------------------
