--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -47,6 +47,7 @@ Legend:
     (#) Redirection message is missing (Issue #1366)
     (#) Disabling time check in cache while adding an object and "force" parameter is set to true
     (#) SobiPro menu link looses function if edited (Issue #1397)
+    (#) Pre-selecting categories in SigsiuTree to prevent "O items selected" output on iOS (Issue #1367)
 
 
 -------------------
@@ -68,7 +69,6 @@ Legend:
     (#) SigsiuTree, category field: disabled possibility to select (click) additional category as long as the previous wasn't added (Issue #1347)
     (#) Wrong language used if 'en-GB' pre-load function is disabled (Issue #1352)
     (#) Pending entries aren't visible in front-end (Issue #1354)
-    (#) Pre-selecting categories in SigsiuTree to prevent "O items selected" output on iOS
 
     (!) Changed deprecated JException to core Exception
 
