--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,12 @@
 ; $Author$
 ; $HeadURL$
 
+
+SP.FM.SEL.LIST_DEPENDENCY="Dependency Options"
+SP.FMN.LIST_DEPENDENCY="Use Dependency List"
+SP.FMN.LIST_DEPENDENCY_FILE="Select Definition File"
+SP.FM.UPLOAD_DEPENDENCY_FILE="Upload Definition File"
+
 SP.FM.IMG.CROP_IMG="Crop Image"
 
 SP.TB.SAVE_AND_NEW="Save & New"
