Preparing dependency list - frontend editing done

--- a/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
+++ b/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
@@ -81,7 +81,7 @@ SP.COUNTRIES.BAHRAIN="Bahrain"
 SP.COUNTRIES.BANGLADESH="Bangladesh"
 SP.COUNTRIES.BHUTAN="Bhutan"
 SP.COUNTRIES.BRUNEI="Brunei"
-SP.COUNTRIES.BURMA-MYANMAR="Burma (Myanmar)"
+SP.COUNTRIES.BURMA="Burma (Myanmar)"
 SP.COUNTRIES.CAMBODIA="Cambodia"
 SP.COUNTRIES.CHINA="China"
 SP.COUNTRIES.EAST-TIMOR="East Timor"
@@ -132,7 +132,7 @@ SP.COUNTRIES.BOSNIA-AND-HERZEGOVINA="Bosnia and Herzegovina"
 SP.COUNTRIES.BULGARIA="Bulgaria"
 SP.COUNTRIES.CROATIA="Croatia"
 SP.COUNTRIES.CYPRUS="Cyprus"
-SP.COUNTRIES.REPUBLIC="Czech Republic"
+SP.COUNTRIES.CZECH-REPUBLIC="Czech Republic"
 SP.COUNTRIES.DENMARK="Denmark"
 SP.COUNTRIES.ESTONIA="Estonia"
 SP.COUNTRIES.FINLAND="Finland"
