Preparing dependency list - extended installer to have a possibility to upload language file as well. Implementing deeper structure

--- a/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
+++ b/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
@@ -20,6 +20,7 @@
 ; $Author$
 ; $HeadURL$
 
+SP.COUNTRIES.COUNTRY="Country"
 SP.COUNTRIES.AFRICA="Africa"
 SP.COUNTRIES.ALGERIA="Algeria"
 SP.COUNTRIES.ANGOLA="Angola"
