(#) View Cache is not restoring task for the $_REQUEST array (Issue #1321)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -51,6 +51,7 @@ Legend:
     (#) Task transformation doesn't works for alpha index (Issue #1362)
     (#) URL click counter counts only once (Issue #1283)
     (#) "Entry update" no fired while updating an entry from administrator area
+    (#) View Cache is not restoring task for the $_REQUEST array (Issue #1321)
 
 
 -------------------
