--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -75,6 +75,7 @@ Legend:
     (#) SigsiuTree, category field: disabled possibility to select (click) additional category as long as the previous wasn't added (Issue #1347)
     (#) Wrong language used if 'en-GB' pre-load function is disabled (Issue #1352)
     (#) Pending entries aren't visible in front-end (Issue #1354)
+    (#) Removing empty UL list from the Multiselect field if no data is selected
 
     (!) Changed deprecated JException to core Exception
 
