--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -28,33 +28,33 @@ Legend:
 
 
 -------------------
-1.1.12 ()
+1.1.12 (28 February 2015)
 -------------------
 
     (+) Possibility to define template functions globally
-    (+) Implemented "dependency" functionality for single select list
+    (+) Implemented "dependency" functionality for single select lists
 
     (#) Image field didn't appear on payment page (Issue #1375)
     (#) Original image is being overwritten with cropped image
     (#) Size of News container corrected
     (#) Fixed issues with time and time offset
     (#) Help URL corrected
-    (#) Itemprop attribute not being displayed in the field edit form (Issue #1392)
+    (#) Itemprop attribute not being displayed in field edit form (Issue #1392)
     (#) Not possible to access entries in front end due to time offset (Issue #1389)
-    (#) Path issues at Windows "server" (Issue #1365)
+    (#) Path issues on Windows "servers" (Issue #1365)
     (#) Added IE11 to valid browsers list (Issue #1368)
-    (#) Allowing unicode groups names in select lis (Issue #1364)
+    (#) Allowing unicode group names in select lists (Issue #1364)
     (#) Redirection message is missing (Issue #1366)
-    (#) Disabling time check in cache while adding an object and "force" parameter is set to true
+    (#) Disabling time check in cache while adding an object and "force" parameter set to true
     (#) SobiPro menu link looses function if edited (Issue #1397)
     (#) Pre-selecting categories in SigsiuTree to prevent "O items selected" output on iOS (Issue #1367)
-    (#) Task transformation doesn't works for alpha index (Issue #1362)
+    (#) Task transformation doesn't work for alpha index (Issue #1362)
     (#) URL click counter counts only once (Issue #1283)
-    (#) "Entry update" no fired while updating an entry from administrator area
+    (#) "Entry update" not fired while updating an entry from administrator area
     (#) View Cache is not restoring task for the $_REQUEST array (Issue #1321)
     (#) Loading language from XML administrator definition file
     (#) Pending/expired entries not visible in category when user has permission to see those (Issue #1354)
-    (#) Not possible to add an image with an uppercased file extension (Issue #1404)
+    (#) Not possible to add an image with an uppercase file extension (Issue #1404)
 
 -------------------
 1.1.11 (28 October 2014)
