--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
     (#) Valid since / valid until time issues while creating new ACL rule (Issue #1415)
+    (#) Dependency field don't work in search view (Issue #1417)
 
     (!) Showing the fields in default2 template moved to a separate template
 
