--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -32,6 +32,7 @@ Legend:
 
     (#) Valid since / valid until time issues while creating new ACL rule (Issue #1415)
     (#) Dependency field don't work in search view (Issue #1417)
+    (#) Notices in function fixTimes() (Issue #1423)
 
     (!) Showing the fields in default2 template moved to a separate template
 
