--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,8 @@
 ; $HeadURL$
 
 
+SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
+
 SP.FM.SEL.LIST_DEPENDENCY="Dependency Options"
 SP.FMN.LIST_DEPENDENCY="Use Dependency List"
 SP.FMN.LIST_DEPENDENCY_FILE="Select Definition File"
