--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,8 @@
 ; $Author: SobiPro Translation Team at Transifex
 
 
+SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the \"%s\" field"
+
 SP.DELETE_CAT_NO_ID="No categories to delete selected."
 
 SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id."
