--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -10,7 +10,7 @@
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
-; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+; See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
@@ -20,7 +20,7 @@
 ; $Author$
 ; $HeadURL$
 
-SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area"
+SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area."
 SP.IMAGE_CROP_HEADER="Crop Image"
 
 SP.ITEMID_MISSING_WARN="It seems some URLs don't have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href='%s' target='_blank'>documentation</a>. Object id: %d"
