--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,7 @@
 ; $HeadURL$
 
 
+SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
 
 SP.FM.SEL.LIST_DEPENDENCY="Dependency Options"
