--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,6 +33,7 @@ Legend:
     (+) Possibility to define a separator sign for meta descriptions from fields
     (+) Required state of a field as node attribute in XML data available
     (+) Additional CSS class node attributes for fields in add/edit form (css-edit), details view & vCard (css-view) and search form (css-search)
+    (+) Category alias as node attribute in details view
 
 
 -------------------
