--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,8 @@ Legend:
     (+) Additional CSS class node attributes for fields in add/edit form (css-edit), details view & vCard (css-view) and search form (css-search)
     (+) Category alias as node attribute in details view
 
+    (#) Fixed issues in SigsiuTree and Internet Explorer (Issue #1469)
+
 
 -------------------
 1.1.13 (31 March 2015)
