--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
     (+) Category alias as node attribute in details view
 
     (#) Fixed issues in SigsiuTree and Internet Explorer (Issue #1469)
+    (#) Passing comma separated values to the SPHtml_Input::select (Issue #1481)
 
 
 -------------------
