--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,8 @@
 ; $Author$
 ; $HeadURL$
 
+SP.SECN.CFG.SETTINGS_CSS_DISABLED="Prevent SobiPro CSS loading"
+SP.SECN.CFG.SETTINGS_AWESOME_DISABLED="Prevent Font Awesome loading"
 
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
