--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,8 @@ Legend:
     (+) Additional CSS class node attributes for fields in add/edit form (css-edit), details view & vCard (css-view) and search form (css-search)
     (+) Category alias as node attribute in details view
 
+    (!) Template styles from SobiPro.css moved to templates default.css file
+
     (#) Fixed issues in SigsiuTree and Internet Explorer (Issue #1469)
     (#) Passing comma separated values to the SPHtml_Input::select (Issue #1481)
     (#) Removing duplicates meta keys (Issue #1476)
