--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,6 +33,7 @@ Legend:
     (+) Required state of a field as node attribute in XML data available
     (+) Additional CSS class node attributes for fields in add/edit form (css-edit), details view & vCard (css-view) and search form (css-search)
     (+) Category alias as node attribute in details view
+    (+) Possibility to include font icons (Material Icons, Font Awesome 3 and 4)
 
     (#) Fixed issues in SigsiuTree and Internet Explorer (Issue #1469)
     (#) Passing comma separated values to the SPHtml_Input::select (Issue #1481)
