--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -41,8 +41,7 @@ Legend:
     (#) Passing comma separated values to the SPHtml_Input::select (Issue #1481)
     (#) Removing duplicates meta keys (Issue #1476)
     (#) Approved value in the front-end when user is accessing unapproved version (Issue #1472)
-    (#) Non-Editable field cannot be set as required. It should be set as not required after it has been used once (Issue  #1457)
-    (#) Illegal use of not initialised std object in select field (Issue #1442)
+    (#) Non-Editable field cannot be set as required; it should be set as not required after it has been used once (Issue  #1457)
 
 
 -------------------
