--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,11 +21,9 @@
 ; $HeadURL$
 
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
-SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
+SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3 (default)"
 SP.SECN.CFG.ICONS_FONT_AWESOME_4="Font Awesome 4"
 SP.SECN.CFG.ICONS_MATERIAL="Google's Material Icons"
-SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL="Font Awesome 3 local (default)"
-
 
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
