(+) Possibility to use font icons (Material Icons, Font Awesome 3 and 4) for category icon. Setting implemented

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -26,6 +26,8 @@ SP.SECN.CFG.ICONS_FONT_AWESOME_4="Font Awesome 4"
 SP.SECN.CFG.ICONS_MATERIAL="Google's Material Icons"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL="Font Awesome 3 local (default)"
 
+SP.OPT_FONTS_ICONS="Font Icons"
+SP.CAT.USE_ICON_FONT="Use Icons Font"
 
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
