--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -45,6 +45,7 @@ Legend:
     (#) Approved value in the front-end when user is accessing unapproved version (Issue #1472)
     (#) Non-Editable field cannot be set as required; it should be set as not required after it has been used once (Issue  #1457)
     (#) HTML style error in range search corrected
+    (#) Crop function doesn't work under Joomla! higher than 3.4.1 (Issue #1487)
 
 
 -------------------
