(+) Possibility to use font icons (Material Icons, Font Awesome 3 and 4) for category icon. Done

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,12 +22,20 @@
 
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
+SP.SECN.CFG.ICONS_FONT_AWESOME_3_2="Font Awesome 3 (2x)"
+SP.SECN.CFG.ICONS_FONT_AWESOME_3_3="Font Awesome 3 (3x)"
+SP.SECN.CFG.ICONS_FONT_AWESOME_3_4="Font Awesome 3 (4x)"
 SP.SECN.CFG.ICONS_FONT_AWESOME_4="Font Awesome 4"
+SP.SECN.CFG.ICONS_FONT_AWESOME_4_2="Font Awesome 4 (2x)"
+SP.SECN.CFG.ICONS_FONT_AWESOME_4_4="Font Awesome 4 (4x)"
+SP.SECN.CFG.ICONS_FONT_AWESOME_4_5="Font Awesome 4 (5x)"
 SP.SECN.CFG.ICONS_MATERIAL="Google's Material Icons"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL="Font Awesome 3 local (default)"
 
 SP.OPT_FONTS_ICONS="Font Icons"
 SP.CAT.USE_ICON_FONT="Use Icons Font"
+SP.CAT.ICON_FONT_ADD_CLASS="Add Font Class"
+
 
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
