--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,8 @@
 ; $Author: SobiPro Translation Team at Transifex
 
 
+SP.TP.LESS_FILE_NOT_COMPILED="Could not compile LESS file. %s"
+
 SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the \"%s\" field"
 
 SP.DELETE_CAT_NO_ID="No categories to delete selected."
