--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,10 @@
 ; $Author$
 ; $HeadURL$
 
+
+SP.TB.COMPILE="Compile"
+SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored under %s"
+
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_2="Font Awesome 3 (2x)"
