--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,11 +33,13 @@ Legend:
     (+) Required state of a field as node attribute in XML data available
     (+) Additional CSS class node attributes for fields in add/edit form (css-edit), details view & vCard (css-view) and search form (css-search)
     (+) Category alias as node attribute in details view
-    (+) Possibility to include font icons (Material Icons, Font Awesome 3 and 4)
+    (+) Possibility to load different font icons (Material Icons, Font Awesome 3 and 4)
+    (+) Possibility to load no icon font in frontend
+    (+) Possibility to select font icons for categories
 
     (!) Template styles from SobiPro.css moved to templates default.css file
     (!) New tree icons
-    (!) new Paypal logo
+    (!) New Paypal logo
 
     (#) Fixed issues in SigsiuTree and Internet Explorer (Issue #1469)
     (#) Passing comma separated values to the SPHtml_Input::select (Issue #1481)
