"Compile and Save" of LESS file

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,7 @@
 ; $HeadURL$
 
 
+SP.TB.COMPILESAVE="Compile & Save"
 SP.TB.COMPILE="Compile"
 SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored under %s"
 
