--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,10 +15,10 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-
+SP.FM.URL.NOFOLLOW="Add nofollow"
 SP.TB.COMPILESAVE="Compile & Save"
 SP.TB.COMPILE="Compile"
-SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored under %s"
+SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored in %s."
 
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
