--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -60,6 +60,7 @@ Legend:
     (#) Wrong query in header functions fixed
     (#) Default option id for Select/Multi-Select/Checkbox/Radio fields set to option-id
     (#) Problem when editing a select field using dependency list which is a required field (Issue #1496)
+    (#) Cloning images while entry is being saved "as copy" (Issue #1494)
 
 
 
