--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -66,6 +66,7 @@ Legend:
     (#) Wrong message in image field if cropping is disabled (Issue #1486)
     (#) Payments and history of an entry not being deleted when entry is being deleted (Issue #1491)
     (#) Deleting section related data from ACL while deleting a section (Issue #1491)
+    (#) Issues with alias for an entry fixed (Issue #1468)
 
 
 
