(#) Valid until reset after each edit (Issue #1452)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -68,6 +68,7 @@ Legend:
     (#) Deleting section related data from ACL while deleting a section (Issue #1491)
     (#) Issues with alias for an entry fixed (Issue #1468)
     (#) Missing user id in request params for unique cache creation (Issue #1453)
+    (#) Valid until reset after each edit (Issue #1452)
 
 
 -------------------
